# Vene-Clicker-2.0-RustV

./: BENCHMARKS.CD  Cargo.toml  README.md  build.cmd  config.txt
.github/workflows/: rust.yml
scripts/: build_release.ps1
src/: clicker.rs  config.rs  foreground_hook.rs  hotkey.rs  input.rs  keybind.rs  main.rs  mouse_hook.rs  runtime.rs  ui.rs  win.rs
